--- a/emulators/server-emulator/src/main/resources/application.yml
+++ b/emulators/server-emulator/src/main/resources/application.yml
@@ -1,3 +1,5 @@
+server:
+  port: 8080
 spring:
   datasource:
     driver-class-name: org.postgresql.Driver
@@ -22,3 +24,8 @@ spring:
   kafka:
     bootstrap-servers: localhost:9092
     topic: "postedmessages"
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health, info, env
