Добавил прием и обработку сообщений из JMeter, добавил сценарий нагрузки - jmeter/kafka.jmx

--- a/emulators/server-emulator/src/main/resources/application.yml
+++ b/emulators/server-emulator/src/main/resources/application.yml
@@ -28,7 +28,7 @@ management:
   endpoints:
     jmx:
       exposure:
-        include:*
+        include: '*'
     web:
       exposure:
         include: prometheus,metrics,health
